client/src/components/InProgressCard/style.css
.card {
    height: auto;
}

.card-body {
    overflow: hidden;
    text-overflow: ellipsis;
    height: 200px;
    overflow: hidden;
}

.card-header {
    height: 90px;
    overflow: hidden;
    background-color: #369;
    /* background-image: url("../../images/linedpaper.png") */
    color: white
}

.card-footer {
    background-color: white;
    border-top: none;
}

.card-title {
    display: inline;
    max-width: 270px;
    padding-left: 15px;
    padding-top: 0px;
}

.card-subtitle {
    display: inline;
    max-width: 270px;
    padding-top: 5px;
    padding-left: 15px;
}

.profile-pic {
    border-radius: 50%;
    width: 40px;
    display: inline;
}

.username {
    display: inline;
    padding-left: 10px;
}

@media only screen and (max-width: 1200px) {
    .card-title {
        max-width: 300px;
    }
}

@media only screen and (max-width: 991px) {
    .card-title {
        max-width: 350px;
    }
}

@media only screen and (max-width: 767px) {
    .card-title {
        max-width: 370px;
    }
    .card {
        width: auto;
    }
    .card-body {
        width: auto;
    }
}

